# vue-rust-kintai-api

./: Cargo.toml  README.md
migrations/2022-10-30-062712_organization/: up.sql
migrations/2022-10-30-081240_create_users/: up.sql
migrations/2022-10-30-101845_create_stamp_types/: down.sql  up.sql
migrations/2022-10-30-102038_create_works/: down.sql  up.sql
migrations/2022-11-01-081828_ts/: up.sql
migrations/2022-11-06-133413_generate_seed/: up.sql
src/: lib.rs  main.rs  routes.rs  schema.rs
src/controllers/: index.rs  mod.rs  test_controller.rs  users_controller.rs  works_controller.rs
src/models/: mod.rs  tests.rs  user.rs  work.rs
