[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.7.0"
diesel = { version = "2.0.2", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"